--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="lib" path="lib/xmlpull-1.1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="//cse-redirect/Redirect/apetrzil/Downloads/xstream-1.4.6.jar"/>
-	<classpathentry kind="lib" path="//cse-redirect/Redirect/apetrzil/Downloads/kxml2-min-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/xstream-1.4.6.jar"/>
+	<classpathentry kind="lib" path="lib/kxml2-min-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
