--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/xstream-1.4.6.jar"/>
 	<classpathentry kind="lib" path="lib/kxml2-min-2.3.0.jar"/>
-	<classpathentry kind="lib" path="/Lab10 - JDBC/lib/mysql-connector-java-5.1.34-bin.jar"/>
+	<classpathentry kind="lib" path="jar/mysql-connector-java-5.1.34-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/apetrzilka/Downloads/mysql-connector-java-5.0.8-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
